infra/k8s/gke/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daring-elbakyan-f2610c0673-depl
  namespace: apps-release
  labels:
    app: daring-elbakyan-f2610c0673
    release: prometheus
spec:
  replicas: 0
  selector:
    matchLabels:
      app: daring-elbakyan-f2610c0673
      release: prometheus
  template:
    metadata:
      labels:
        app: daring-elbakyan-f2610c0673
        release: prometheus
    spec:
      #runtimeClassName: gvisor
      volumes:
        - name: alloy-config
          configMap:
            name: alloy-configmap-daring-elbakyan-f2610c0673
            items:
              - key: alloy.river
                path: config.alloy
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
              - path: "annotations"
                fieldRef:
                  fieldPath: metadata.annotations
      containers:
        - name: daring-elbakyan-f2610c0673
          image: asia-south2-docker.pkg.dev/platform-test-487912/backstract-apps/backstract_apps:067ade3a1de302f9acbfc4c4abbe606bd53c8bc3
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8080
              name: metrics
          resources:
            requests:
              memory: "250Mi"
              cpu: "50m"
            limits:
              memory: "250Mi"
              cpu: "1"
        - name: alloy-sidecar
          image: grafana/alloy:latest
          args:
            - "run"
            - "/etc/alloy/config.alloy"
            - "--server.http.listen-addr=0.0.0.0:12345"
          ports:
            - name: otlp-grpc
              containerPort: 4317
              protocol: TCP
            - name: otlp-http
              containerPort: 4318
              protocol: TCP
            - name: alloy-http
              containerPort: 12345
              protocol: TCP
          volumeMounts:
            - name: alloy-config
              mountPath: /etc/alloy
            - name: podinfo
              mountPath: /etc/podinfo
              readOnly: true
          resources:
            requests:
              memory: "50Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
              cpu: "100m"
