infra/k8s/gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: daring-elbakyan-f2610c0673-srv
  namespace: apps-release
spec:
  selector:
    app: daring-elbakyan-f2610c0673
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7070
  type: NodePort
